--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 			</header>
 			<div id="content">
 				<nav>
-					<a href="index.html">About Me</a> &nbsp;
+					<a href="index.html">About Me and My Home Town</a> &nbsp;
 					<a href="family.html">My Family</a>
 				</nav>
 				<h2>About Me</h2>
-				<img src="HomeTown.jpg" width="250" height="187" alt="Duncannon, Pennsylvania"
+				<img src="HomeTown.jpg" width="270" height="207"alt="Duncannon, Pennsylvania"
 				class="floatImg">
-				<p>SAMPLE TEXT</p>
+				<p>My full name is Riley Kathleen Predix Blanchard, but I just go by Riley. Yes, I have 2 first names, but that didn't happen until I was 4. My parents weren't married when I was born, so my mom gave me her name. I was originally named Riley Kathlen Predix. Then my parents got married, and they didn't know which name to get rid of, so they just added Blanchard and moved everything else over. It usually causes confusion, beacause teachers don't know to call me Riley or Kathleen or both.
+
+				I have always lived in Duncannon, Pennsylvania, and to be honest, I love it. These are the reasons I love it:
+					<li>Half is in the woods and the other half is like a small city</li>
+					<li>It is small, so almost everybody knows everybody</li>
+					<li>People are nice</li>
+					<li>There is a lot of things to do and many places to go (There is an antique shop, a pizza place, a Dollar General, a Sheetz, a Pub, an ice cream shop, a furniture store, and the local schools are near by.)</li>
+					<li>There is state game land, so you don't have to live in the woods or own land to go hunting.</li></p>
 			</div>
 			<footer> &copy;  2019 Riley Kathleen Blanchard </footer>
 		</div>
